# fastapi-firebase-mongodb

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: auth.py
app/core/: config.py  db.py  security.py
app/models/: user.py
app/schemas/: auth.py
