[project]
name = "fastapi-firebase-mongodb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "firebase-admin>=7.5.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
